<resources>
    <string name="app_name">Wallet</string>
    <string name="subway_card_text">Subcard Points Balance</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="subway_card_info">To display your Subcard, you must have signed up on the Subcard UK website. http://subcard.subway.co.uk</string>
    <string name="no_cards">You have no cards in your wallet. You should add one!</string>
    <string name="new_card">New Card</string>
    <string name="subway_card">Subcard UK</string>
    <string name="save">Save</string>
    <string name="verifying_card">Verifying card details...</string>
    <string name="card_details_incorrect">The card details are not correct</string>
    <string name="delete">Delete Card</string>
    <string name="delete_confirm">Are you sure you wish to delete this card?</string>
    <string name="deleted">Deleted</string>
    <string name="card_created">Card Created</string>
    <string name="testcard">Test Card</string>
    <string name="points_balance">Points Balance</string>
    <string name="clubcard_postcode_info">Entering your postcode is optional. If you enter it, we can fetch your balance. (Blame Tesco)</string>
    <string name="clubcard_number">Tesco Clubcard Number</string>
    <string name="postcode">Postcode</string>
    <string name="problem_with_barcode">Barcode could not be generated</string>
    <string name="clubcard">Tesco Clubcard</string>
    <string name="open_source">Open Source</string>
    <string name="surname">Surname</string>
    <string name="nectar_card_number">Nectar Card Number</string>
    <string name="nectar_card">Nectar Card</string>
    <string name="nectar_prefix">98263000</string>
    <string name="nectar_details">You have a total of {points} points, which are worth £{worth}</string>
    <string name="new_x_card">New {card}</string>
    <string name="the_gym">The Gym</string>
    <string name="the_gym_pin">Entry PIN</string>
    <string name="the_gym_email_info">Entering your email address is optional, but it allows us to download your gym usage</string>
    <string name="entry">Entry on {date}</string>
    <string name="exit">Exit</string>
    <string name="refresh">Refresh</string>
    <string name="medicine_card">Medicine Usage</string>
    <string name="name">Name</string>
    <string name="medicine_card_setup">Enter a name for this card. Usually this is a person\'s name, so you can store multiple people\'s records</string>
    <string name="card_edited">Card updated</string>
    <string name="medicine_usage">Medicine Usage</string>
    <string name="choose_card">Choose Card Type</string>
    <string name="back">Back</string>
    <string name="edit_x_card">Edit {card}</string>
    <string name="edit">Edit</string>
</resources>
