<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_margin="10dp"
        android:hint="@string/clubcard_number"
        android:id="@+id/number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="10dp"
        android:hint="@string/postcode"
        android:id="@+id/postcode" />

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:text="@string/clubcard_postcode_info"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>